Closed Bug 1648871 Opened 5 years ago Closed 5 years ago

SWGL crash when using debug draws

Categories

(Core :: Graphics: WebRender, defect, P3)

Desktop
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: bpeers, Assigned: bpeers)

Details

Attachments

(1 file)

Enable gfx.webrender.debug.picture-caching in a WR build, then switch to gfx.webrender.software results in a crash.

The crash is due to a number of places where we use p.impl after asserting it's not null, but this assert is not firing in release.
Short term fix is to at least not crash in the case of an unsupported shader.

Guard against nullptr access of missing p.impl.
Also change LinkStatus so is_initialized is no longer true and calling
code can early out if bind_program fails.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Flags: qe-verify+

I tried to reproduce this issue using a Windows 10 machine (old nightly build from 2020.06.26) which has webrender enabled by default but after enabling gfx.webrender.debug.picture-caching then creating gfx.webrender.software I did not get any crashes. Is there a particular build I must use in order to reproduce? I saw some webrender entries in treeherder but no webrender specific build. Also do you think this is worth testing by manual QA?
I'm requesting needinfo from you since the account of the original reporter is disabled.

Flags: needinfo?(lsalzman)

This does not really require QA testing.

Flags: needinfo?(lsalzman)

(In reply to Lee Salzman [:lsalzman] from comment #5)

This does not really require QA testing.

Thanks for your answer, dropping qe-verify+ in this case.

Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: