Bug 1648871 - debug draw crashes SWGL r=lsalzman

Guard against nullptr access of missing p.impl.
Also change LinkStatus so is_initialized is no longer true and calling
code can early out if bind_program fails.

Differential Revision: https://phabricator.services.mozilla.com/D81421